AC_INIT

AC_PROG_CC
AC_PROG_INSTALL

AC_PATH_PROG(STRIP, strip, no, $PATH:/sbin:/usr/sbin:/usr/local/sbin )
if [[ "$STRIP" = "no" ]] ; then
	AC_MSG_ERROR("Could not find strip")
fi

AC_SUBST(BUILDLIBS)
AC_SUBST(AFTERBUILD)
AC_SUBST(INSTALL_PREFIX)

AC_PREFIX_DEFAULT(/usr/local)
if [[ $prefix = "NONE" ]] ; then
	AC_DEFINE(INSTALL_PREFIX, "/usr/local")
else
	AC_DEFINE(INSTALL_PREFIX, "$prefix")
fi

AC_C_CONST
AC_TYPE_SIZE_T

AC_CONFIG_FILES([Makefile src/Makefile])

AC_OUTPUT
