AC_INIT

AC_PROG_CC
AC_PROG_INSTALL

AC_PATH_PROG(STRIP, strip, no, $PATH:/sbin:/usr/sbin:/usr/local/sbin )
if [[ "$STRIP" = "no" ]] ; then
	AC_MSG_ERROR("Could not find strip")
fi

AC_CHECK_LIB(readline, readline,,,[-lcurses])
AC_CHECK_LIB(socket, main)
AC_CHECK_LIB(nsl, main)
AC_CHECK_LIB(curses, main)

AC_HEADER_STDC([])
AC_CHECK_HEADERS([errno.h wait.h signal.h syslog.h time.h sys/stat.h \
	sys/ioctl.h sys/time.h sys/types.h sys/termios.h fcntl.h getopt.h \
	stdint.h stdbool.h readline/readline.h readline/history.h])

AC_C_BIGENDIAN()

AC_CHECK_TYPES([socklen_t])

AC_CHECK_FUNCS([getopt_long])

AC_SUBST(BUILDLIBS)
AC_SUBST(AFTERBUILD)
AC_SUBST(INSTALL_PREFIX)

AC_PREFIX_DEFAULT(/usr/local)
if [[ $prefix = "NONE" ]] ; then
	AC_DEFINE(INSTALL_PREFIX, "/usr/local")
else
	AC_DEFINE(INSTALL_PREFIX, "$prefix")
fi

AC_C_CONST
AC_TYPE_SIZE_T

AC_CONFIG_FILES([Makefile src/Makefile])

AC_OUTPUT
